app/src/main/java/example/powercode/us/redditclonesample/base/error/ErrorBase.java
package example.powercode.us.redditclonesample.base.error;

/**
 * Created by dev for YoungBusinessClub on 19-Mar-18.
 * Contains error message which will be used by model
 */
public interface ErrorBase {
    String getMessage();
}
